# McSim-TLM-NoC

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  compile.py  simulate.py
apps/: vce.amxmi
apps/DEMO_CAR/: DEMO_CAR.modes  DemoCar-Drive.amxmi  DemoCar-PowerDown.amxmi  DemoCar-PowerUp.amxmi  Drive.csv  ModeChangeTiming.csv  ModeList.csv  PowerDown.csv  PowerUp.csv
apps/DEMO_CAR/Old/: DEMO_CAR.amxmi
runconfigs/: Debug-DC-ZIGZAG-FCFS-NOPERIO-NODEP-4x4.launch  Debug-DCMODE-ZIGZAG-FCFS-NOPERIO-NODEP-4x4.launch  Debug-DCOLD-ZIGZAG-FCFS-NOPERIO-NODEP-4x4.launch  Release-DC-MINCOMM-FCFS-NOPERIO-NODEP-2x2.launch  Release-DC-MINCOMM-FCFS-NOPERIO-NODEP-4x4.launch  Release-DC-STATIC-FCFS-NOPERIO-NODEP-4x4.launch  Release-DC-ZIGZAG-FCFS-NOPERIO-NODEP-4x4.launch  Release-DC-ZIGZAG-FCFS-PERIO-NODEP-4x4.launch  Release-DCMODE-ZIGZAG-FCFS-NOPERIO-NODEP-4x4.launch
src/Energy_Estimator/: Power_Multiproc.cpp
src/Energy_Estimator/Configuration_Parameters/: Parameters_2.txt
src/Platform_Src/: abstract_simu.cxx  dcSimuParams.cxx  dcSimuParams.hxx  dcSystem.cxx  dcSystem.hxx  processingElement.cxx  processingElement.hxx  processingElementType.cxx
src/Platform_Src/NoC/: nocInterconnect.cxx  nocInterconnect.hxx
src/energy_estimator/: Power_Multiproc.cpp
src/energy_estimator/Configuration_Parameters/: Configuration.txt
src/platform/: abstract_simu.cxx  dcConfiguration.hxx  dcSimuParams.cxx  dcSimuParams.hxx  dcSystem.cxx  dcSystem.hxx  processingElement.cxx  processingElement.hxx  processingElementType.cxx  processingElementType.hxx
src/platform/noc/: nocInterconnect.cxx  nocInterconnect.hxx  packet.cxx  packet.hxx
